--- a/map-ui/src/App.css
+++ b/map-ui/src/App.css
@@ -71,7 +71,7 @@ body {
 .titleBar {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   border-bottom: 1px solid black;
   height: 60px;
   background-color: white;
@@ -84,10 +84,19 @@ body {
   color: black;
 }
 
-.titleBar img {
+.titleBar .guRoundel {
   padding: 10px;
   margin-right: 10px;
   height: 40px;
+}
+
+.titleBar .radarIcon {
+  padding: 10px;
+  height: 40px;
+}
+
+.titleBar .radarIcon.activated {
+  filter: brightness(3)
 }
 
 @media (prefers-color-scheme: dark) {
