--- a/map-ui/src/App.css
+++ b/map-ui/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 .App-logo {
@@ -51,7 +52,7 @@ body {
 
 .leaflet-container {
   width: 100%;
-  height: 90vh;
+  height: 100%;
 }
 
 .leaflet-popup-content img {
@@ -60,12 +61,15 @@ body {
 
 .belowBars {
   width: 100%;
+  height: calc(100% - 105px);
   display: flex;
   flex-direction: row;
 }
 
 .sidebar {
   width: 400px;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .titleBar {
