--- a/map-ui/src/App.css
+++ b/map-ui/src/App.css
@@ -72,6 +72,19 @@ body {
   overflow-y: scroll;
 }
 
+.sidebar h2 {
+  padding-top: 1em;
+  font-family: GH Guardian Headline,Guardian Egyptian Web,Georgia,serif;
+}
+
+.sidebar div {
+  border-bottom: 1px solid black;
+}
+
+.sidebar img {
+  width: 100%;
+}
+
 @media screen and (max-width: 800px) {
   .sidebar {
     display: none;
