--- a/map-ui/src/App.css
+++ b/map-ui/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   display: flex;
@@ -70,6 +74,7 @@ body {
   width: 600px;
   height: 100%;
   overflow-y: scroll;
+  text-align: left;
 }
 
 .sidebar h2 {
@@ -79,10 +84,22 @@ body {
 
 .sidebar div {
   border-bottom: 1px solid black;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
-.sidebar img {
+.sidebar > div > img {
   width: 100%;
+}
+
+.sidebar article {
+  padding: 0 0.5em;
+}
+
+.sidebar article img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 @media screen and (max-width: 800px) {
